--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,8 +14,8 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
-      <li><a th:href="@{/login}">Login</a></li>
-      <li><a th:href="@{/signup}" href="#">Signup</a></li>
+      <li><a th:text="${loggedIn ? username : 'Login'}" th:href="${loggedIn ? '/user/index' : '/login'}"></a></li>
+      <li><a th:text="${loggedIn ? 'Logout' : 'Signup'}" th:href="${loggedIn ? '/logout' : '/Signup'}"></a></li>
     </ul>
   </div>
 </nav>
