--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <title th:text="${title}">####</title>
-</head><body>
+</head>
+<body>
 <div th:replace="fragments/header :: navbar"></div>
 <div class="img"></div>
 <div class="center">
