--- a/src/main/resources/templates/dummy_users/user_sections/dashboard.html
+++ b/src/main/resources/templates/dummy_users/user_sections/dashboard.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="dummy_users/user_base::base_fragment(~{::section})">
 <section class="main-body">
-    <h2>Dashboard</h2>
-    <div class="promo_card">
-      <h1>Welcome to Dummy</h1>
-      <span>Subscribe to dummy premuim</span>
-      <button>Pay $99</button>
-    </div>
+<!--    <h2>Dashboard</h2>-->
+<!--    <div class="promo_card">-->
+<!--      <h1>Welcome to Dummy</h1>-->
+<!--      <span>Subscribe to dummy premuim</span>-->
+<!--      <a th:href="${'/admin/categories'}" href="#">categories</a>-->
+<!--      <a th:href="@{/admin/all-categories}" href="#">categories</a>-->
+
+<!--      <button>All products</button>-->
+<!--    </div>-->
 </section>
 </html>
