--- a/src/main/resources/static/css/dummy_users/user_base.css
+++ b/src/main/resources/static/css/dummy_users/user_base.css
@@ -65,13 +65,12 @@ body {
 
 .container {
     display: flex;
-    gap: 50px;
 }
 
 /* Left side menubar section */
 
 .side_navbar {
-    background: #fff;
+    background: #1b1b1b;
     padding: 1px;
     display: flex;
     flex-direction: column;
@@ -128,7 +127,7 @@ body {
     background: rgb(37, 37, 37);
 }
 
-.promo_card h1, .promo_card span, button {
+.promo_card h1, .promo_card span{
     margin: 10px;
 }
 
@@ -142,22 +141,25 @@ body {
 
 /* Marketplace */
 
-.main-top{
+.main-top {
     display: flex;
     width: 100%;
 }
-.main-top i{
+
+.main-top i {
     position: absolute;
     right: 0;
     margin: 10px 30px;
     color: rgb(110, 109, 109);
     cursor: pointer;
 }
-.main .users{
+
+.main .users {
     display: flex;
     width: 100%;
 }
-.users .card{
+
+.users .card {
     width: 25%;
     margin: 10px;
     background: #fff;
@@ -166,32 +168,39 @@ body {
     padding: 10px;
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
-.users .card img{
+
+.users .card img {
     width: 70px;
     height: 70px;
     border-radius: 50%;
 }
-.users .card h4{
+
+.users .card h4 {
     text-transform: uppercase;
 }
-.users .card p{
+
+.users .card p {
     font-size: 12px;
     margin-bottom: 15px;
     text-transform: uppercase;
 }
-.users table{
-    margin:  auto;
+
+.users table {
+    margin: auto;
 }
-.users .per span{
+
+.users .per span {
     padding: 5px;
     border-radius: 10px;
     background: rgb(223, 223, 223);
 }
-.users td{
+
+.users td {
     font-size: 14px;
     padding-right: 15px;
 }
-.users .card button{
+
+.users .card button {
     width: 100%;
     margin-top: 8px;
     padding: 7px;
@@ -200,20 +209,23 @@ body {
     background: transparent;
     border: 1px solid #4AD489;
 }
-.users .card button:hover{
+
+.users .card button:hover {
     background: #4AD489;
     color: #fff;
     transition: 0.5s;
 }
 
-/*Attendance List serction  */
-.attendance{
-    margin-top: 20px;
+/*  All category section  */
+
+
+.all_categories_container {
     text-transform: capitalize;
     flex-grow: 1;
-    margin-right: 30px;
+    margin: 30px 30px;
 }
-.attendance-list{
+
+.all_categories_list {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
@@ -221,46 +233,154 @@ body {
     border-radius: 10px;
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
-.table{
+.all_categories_list h1 {
+    margin: 10px 5px;
+}
+
+.all_categories_table {
     border-collapse: collapse;
-    margin: 25px 0;
+    margin-bottom: 25px;
     font-size: 15px;
     min-width: 100%;
     overflow: hidden;
     border-radius: 5px 5px 0 0;
 }
-table thead tr{
+
+.all_categories_table thead tr {
     color: #fff;
-    background: #34AF6D;
+    background: #1b1b1b;
     text-align: left;
     font-weight: bold;
 }
-.table th,
-.table td{
+
+.all_categories_table th,
+.all_categories_table td {
     padding: 12px 15px;
 }
-.table tbody tr{
+
+.all_categories_table tbody tr {
     border-bottom: 1px solid #ddd;
+    color: rgb(100, 100, 100);
+    cursor: pointer;
 }
-.table tbody tr:nth-of-type(odd){
-    background: #f3f3f3;
+
+/*.table tbody tr:nth-of-type(odd){*/
+/*    background: #f3f3f3;*/
+/*}*/
+.all_categories_table tbody tr.active {
+    /*font-weight: bold;*/
+    border-left: 2px solid rgb(100, 100, 100);
 }
-.table tbody tr.active{
-    font-weight: bold;
-    color: #4AD489;
+
+.all_categories_table tbody tr.hover {
+    /*font-weight: bold;*/
+    background: rgb(235, 235, 235);
 }
-.table tbody tr:last-of-type{
-    border-bottom: 2px solid #4AD489;
+
+
+.all_categories_table tbody tr:last-of-type {
+    border-bottom: 2px solid #1b1b1b;
 }
-.table button{
+
+.add-categories-btn {
     padding: 6px 20px;
     border-radius: 10px;
     cursor: pointer;
     background: transparent;
-    border: 1px solid #4AD489;
+    font-weight: bold;
+    border: 2px solid #1b1b1b;
+    color: #000;
+    display: inline-block;
 }
-.table button:hover{
-    background: #4AD489;
+
+.add-categories-btn:hover {
+    background: #1b1b1b;
+    transition: 0.5s;
     color: #fff;
-    transition: 0.5rem;
+
+}
+
+/*------------- Add product ------------ */
+
+.add-product-body{
+    flex-grow: 1;
+    background: #000;
+}
+
+.add-product-form{
+    border: 1px solid black;
+    color: #fff;
+    padding: 0 40px 30px 40px;
+    background: #1b1b1b;
+    width: 500px;
+    margin: 20px auto;
+    border-radius: 5px;
+}
+.add-categories-form .field{
+    margin-top: 20px;
+}
+
+.field label{
+    display: block;
+    margin-bottom: 5px;
+    margin-left: 7px;
+}
+.field input,form button{
+    height: 50px;
+    width: 100%;
+    outline: none;
+    font-size: 19px;
+    color: #868686;
+    padding: 0 15px;
+    border-radius: 0 5px 5px 0;
+    border: 1px solid #444;
+    caret-color: #339933;
+    background: linear-gradient(#333,#222);
+}
+
+.field select{
+    background: linear-gradient(#333,#222);
+    color: #fff;
+    padding: 5px;
+    font-size: initial;
+}
+
+.field select option {
+    margin: 40px;
+    background: rgba(0, 0, 0, 0.3);
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    border-radius: 0;
+}
+
+.field textarea {
+    width: 100%;
+    background: linear-gradient(#333,#222);
+    color: #fff;
+    padding: 10px;
+}
+
+.field textarea::placeholder {
+    font-size: 16px;
+}
+
+.add-product-body input:focus{
+    color: #fff;
+    /*background: white;*/
+}
+
+.add-product-body button{
+    margin-top: 30px;
+    border-radius: 5px!important;
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+.add-product-body button:hover{
+    color: #fff;
+    border: 1px solid #fff;
+    box-shadow: 0 0 5px rgba(255,255,255,.3),
+    0 0 10px rgba(255,255,255,.2),
+    0 0 15px rgba(255,255,255,.1),
+    0 2px 0 black;
 }
