--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
       <li><a th:text="${loggedIn ? username : 'Login'}" th:href="${loggedIn ? '/user/index' : '/login'}"></a></li>
-      <li><a th:text="${loggedIn ? 'Logout' : 'Signup'}" th:href="${loggedIn ? '/logout' : '/Signup'}"></a></li>
+      <li><a th:text="${loggedIn ? 'Logout' : 'Signup'}" th:href="${loggedIn ? '/logout' : '/signup'}"></a></li>
     </ul>
   </div>
 </nav>
